# medicine-management

./: LICENSE  README.md
back(docker,postgredb)/: .env
back(docker,postgredb)/database/: schema.sql
back(docker,postgredb)/src/config/: db.js
back(docker,postgredb)/src/controllers/: diseaseController.js  (+1 more)
back(express + docker +postgredb)/: docker-compose.yml  nodemon.json  package.json
back(express + docker +postgredb)/src/: app.js
back(local)/: .env  package-lock.json
back(local)/src/: app.js
back(springb)/medicine_manager/: pom.xml
fe for express/: AuthService.cpp  ClinicService.h  ClinicWidget.cpp  ClinicWidget.h  DashboardService.h  DashboardWidget.h  DiseaseWidget.h  LoginWindow.h  MedicineWidget.cpp  PatientService.h  PatientWidget.cpp  PrescriptionService.cpp  PrescriptionWidget.cpp  UserWidget.cpp  main.cpp
fe for springboot/: ClinicService.cpp  DashboardService.cpp  LoginWindow.cpp  MedicineService.cpp  PatientModel.h  PatientService.cpp  PatientWidget.cpp  PatientWidget.h  PrescriptionService.cpp  PrescriptionWidget.cpp  PrescriptionWidget.h  RegisterDialog.cpp
front/: AuthService.h  ClinicService.cpp  DashboardWidget.cpp  DiseaseModel.h  DiseaseService.cpp  DiseaseWidget.cpp  MedicineModel.h  MedicineService.h  MedicineWidget.h  PrescriptionModel.h  UserService.cpp
front(local)/: CMakeLists.txt  ClinicModel.h  DashboardService.cpp  DiseaseService.h  MedicineWidget.cpp  PatientModel.h  PatientService.cpp  PatientWidget.h  PrescriptionService.h  PrescriptionWidget.cpp  PrescriptionWidget.h  RegisterDialog.h  UserModel.h  UserService.h  UserWidget.h  mainwindow.cpp  mainwindow.h
postgresqlmapping/: table&relationship.docx  ~$ble&relationship.docx
(+63 files in other folders)
